--- a/webshop/package.json
+++ b/webshop/package.json
@@ -16,7 +16,9 @@
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "react": "^19.0.0",
+    "react-chatbotify": "^2.0.0-beta.31",
     "react-dom": "^19.0.0",
+    "react-native": "^0.78.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "react-router-dom": "^7.3.0",
